--- a/Project/style.css
+++ b/Project/style.css
@@ -11,6 +11,8 @@
     --nav1: #1F3A56;
     --nav2: #004e92;
 	--btn: #f4b400;
+--icon: #f4b400;
+	--head: #0c0c0c;
 }
 
 
@@ -601,7 +603,7 @@ color: white ;
 
 /* .heroimg{
 
-    background-image: url("./assets/becoming-the-hero-of-your-travel-story-embracing-the-journe.jpeg");
+    background-image: url("./assets/becoming-the-hero-of-your-travel-story-embracing-the`-journe.jpeg");
     height: 600px;
     background-repeat: no-repeat;
     background-size: cover;
@@ -610,6 +612,25 @@ color: white ;
 .carousel{
     height: 500px;
 }
+.hero-section {
+  height: 85vh;
+  min-height: 500px;
+  max-height: 800px;
+}
+
+
+
+.carousel-image-container {
+  height: 100%;
+  width: 100%;
+}
+
+.carousel-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 
 
 
@@ -927,9 +948,9 @@ padding-top: 10px;
 
 .booking{
 	background: linear-gradient(135deg, #000428, #004e92);
-	height: 100px;
+	
 	font-weight: bold;
-	height: 180px;
+	
 }
 
 .myinput{
@@ -943,13 +964,13 @@ color: white;
 }
 
 .Mybtn{
-	padding: 12px 30px;
+	padding: 14px 50px;
 	border: none;
 	color: white;
 	background-color: var(--btn);
 	border-radius: 25px;
 	font-weight: bold;
-
+font-size: 17px;
 }
 
 
@@ -958,6 +979,7 @@ color: white;
 .serviceHead1{
 	color: black;
 	font-size: 50px;
+	margin-bottom: 45px;
 }
 .serviceHead2{
 	color: var(--btn);
@@ -999,3 +1021,277 @@ color: white;
     height: 200px;
     object-fit: cover;
 }
+
+
+
+/* apart section */
+
+
+.apartHead1{
+	color: black;
+	font-size: 50px;
+}
+.apartHead2{
+	color: var(--btn);
+	font-weight: bold;
+}
+
+.aparthead{
+	font-weight: bold;
+	font-size: 25px;
+	color: var(--head);
+
+}
+
+.apartpara{
+	font-size: 13px;
+}
+
+
+.icon{
+	font-size: 40px;
+
+color: var(--icon);}
+
+/* Drive section */
+
+
+.driveImg{
+	background-image: url("./assets/1-Mercedes-A-Class.jpg");
+	background-size: cover;
+		height: 800px;
+		background-repeat: no-repeat;
+		background-position: right;
+
+}
+
+.drivehead{
+	font-weight: bold;
+	font-size: 50px;
+	color: white;
+}
+
+.driveContent{
+	width: 35%;
+	padding-top: 120px;
+	padding-left: 70px;
+}
+
+.drivePara{
+	font-size: 20px;
+	margin-bottom: 30px;
+}
+
+
+.drivebtn button{
+padding: 14px 50px;
+	border: none;
+	color: white;
+	background-color: var(--btn);
+	border-radius: 25px;
+	font-weight: bold;
+font-size: 17px;
+}
+
+
+
+/* Contact Form */
+
+.contact
+{
+	width: 100%;
+	
+}
+.contact_background
+{
+	position: absolute;
+	bottom: -34px;
+	left: 0;
+	width: 100%;
+	height: 104%;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center center;
+}
+.contact_title
+{
+	font-size: 30px;
+	font-weight: 700;
+	color: #FFFFFF;
+	text-transform: uppercase;
+}
+.contact_form_container
+{
+	margin-top: 40px;
+	padding-top: 74px;
+	padding-left: 48px;
+	padding-right: 48px;
+	padding-bottom: 88px;
+	background: linear-gradient(to top right, #fa9e1b, #8d4fff);
+}
+.contact_form
+{
+	margin-top: 52px;
+	font-size: 0px;
+}
+.input_field
+{
+	height: 48px;
+	font-size: 12px;
+	font-weight: 400;
+	border: none;
+	outline: none;
+	background: transparent;
+	color: #FFFFFF;
+	border-bottom: solid 2px #e1e1e1;
+}
+.contact_form_name
+{
+	width: calc((100% - 30px) / 2);
+	margin-right: 30px;
+}
+.contact_form_email
+{
+	width: calc((100% - 30px) / 2);
+}
+.contact_form_subject
+{
+	width: 100%;
+	margin-top: 11px;
+}
+.contact_form_message
+{
+	height: 126px;
+	width: 100%;
+	border: none;
+	outline: none;
+	margin-top: 19px;
+	background: transparent;
+	font-size: 12px;
+	font-weight: 400;
+	color: #FFFFFF;
+	border-bottom: solid 2px #e1e1e1;
+	padding-top: 11px;
+}
+.form_submit_button
+{
+	font-size: 13px;
+	font-weight: 700;
+	color: #fff;
+	text-transform: uppercase;
+	line-height: 53px;
+	padding-left: 29px;
+	padding-right: 29px;
+	background: #31124b;
+	-webkit-transform: translateY(15px);
+	-moz-transform: translateY(15px);
+	-ms-transform: translateY(15px);
+	-o-transform: translateY(15px);
+	transform: translateY(15px);
+	border: none;
+	outline: none;
+	margin-top: 37px;
+	cursor: pointer;
+}
+.form_submit_button:hover
+{
+	opacity: 0.8;
+}
+.input_field::-webkit-input-placeholder,
+.text_field::-webkit-input-placeholder
+{
+	font-size: 12px !important;
+	font-weight: 400 !important;
+	color: #FFFFFF !important;
+}
+.input_field:-moz-placeholder,
+.text_field:-moz-placeholder
+{
+	font-size: 12px !important;
+	font-weight: 400 !important;
+	color: #FFFFFF !important;
+}
+.input_field::-moz-placeholder,
+.text_field::-moz-placeholder
+{
+	font-size: 12px !important;
+	font-weight: 400 !important;
+	color: #FFFFFF !important;
+} 
+.input_field:-ms-input-placeholder,
+.text_field:-ms-input-placeholder
+{ 
+	font-size: 12px !important;
+	font-weight: 400 !important;
+	color: #FFFFFF !important;
+}
+.input_field::input-placeholder,
+.text_field::input-placeholder
+{
+	font-size: 12px !important;
+	font-weight: 400 !important;
+	color: #FFFFFF !important;
+}
+
+
+
+
+
+
+
+
+
+/* medai screens */
+/* @media (max-width: 998px) {
+
+	.myform{
+		display: flex;
+		flex-direction: column;
+	}
+	
+} */
+
+
+
+
+
+@media (max-width: 768px) {
+  .hero-section {
+    height: 60vh;
+    min-height: 350px;
+  }
+
+  .drivehead{
+	font-size: 40px;
+
+  }
+  .drivePara{
+	font-size: 15px;
+  }
+  .drivebtn button{
+	padding: 10px 30px;
+	border-radius: 15px;
+	font-size: 15px;
+  }
+  .driveContent{
+	width: 100%;
+	justify-content: end !important;
+ padding-bottom: 20px;
+ padding: 20px;
+  }
+}
+
+
+@media (min-width:768px) and (max-width: 992px) {
+	.driveContent{
+		width: 50%;
+	}
+	
+}
+/* @media (min-width: 768px) and (max-width:1200px) {
+
+	.herosection{
+		height: 100vh;
+	}
+	
+} */
