--- a/Project/style.css
+++ b/Project/style.css
@@ -1081,7 +1081,8 @@ color: var(--icon);}
 }
 
 .driveImg{
-	background-image: url("./assets/1-Mercedes-A-Class.jpg");
+	 background:
+linear-gradient(135deg, rgba(35,37,38,0.6), rgba(65,67,69,0.6)), url("./assets/1-Mercedes-A-Class.jpg");
 	background-size: cover;
 		height: 800px;
 		background-repeat: no-repeat;
@@ -1117,7 +1118,13 @@ padding: 14px 50px;
 font-size: 17px;
 }
 
+/* about section */
 
+.drivehead {
+	color: var(--head);
+	font-size: 40px;
+	font-weight: bold;
+}
 
 /* Contact Form */
 
@@ -1330,6 +1337,8 @@ font-size: 17px;
  padding-bottom: 20px;
  padding: 20px;
   }
+
+  
 }
 
 
@@ -1339,13 +1348,16 @@ font-size: 17px;
 	}
 	
 }
-/* @media (min-width: 768px) and (max-width:1200px) {
+@media (min-width: 768px) and (max-width:1300px) {
 
 	.herosection{
-		height: 100vh;
+		height: 98vh !important;
+	}
+	.carousel-image{
+		height: 900px !important;
 	}
 	
-} */
+}
 
 @media (max-width:768px) { 
 	.main{
