--- a/Project/style.css
+++ b/Project/style.css
@@ -56,6 +56,16 @@ p
 	-webkit-text-shadow: rgba(0,0,0,.01) 0 0 1px;
 	text-shadow: rgba(0,0,0,.01) 0 0 1px;
 }
+
+.Mybtn{
+	padding: 14px 50px;
+	border: none;
+	color: white;
+	background-color: var(--btn);
+border-radius: 5px;
+	font-weight: bold;
+font-size: 17px;
+}
 /* p a
 {
 	display: inline;
@@ -988,15 +998,7 @@ padding-top: 10px;
 color: white;
 }
 
-.Mybtn{
-	padding: 14px 50px;
-	border: none;
-	color: white;
-	background-color: var(--btn);
-	border-radius: 25px;
-	font-weight: bold;
-font-size: 17px;
-}
+
 
 
 /* Service section */
@@ -1005,6 +1007,20 @@ font-size: 17px;
 	padding: 70px 0px;
 }
 
+.mybtn{
+	padding: 8px 20px;
+	border: none;
+	color: white;
+	background-color: black;
+	border-radius: 5px;
+	font-weight: bold;
+font-size: 10px;
+}
+
+.card-title{
+	font-size: 25px;
+	font-weight: bold;
+}
 .serviceHead1{
 	color: black;
 	font-size: 50px;
@@ -1020,10 +1036,10 @@ font-size: 17px;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    width: 55px;
-    height: 55px;
+    width: 35px;
+    height: 35px;
     border: none;
-    background: linear-gradient(135deg, #000428, #004e92);
+ background-color: black;
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -1034,7 +1050,7 @@ font-size: 17px;
 
 .custom-btn i {
     color: white;
-    font-size: 30px;
+    font-size: 18px;
 }
 
 .carousel-control-prev2 {
@@ -1194,7 +1210,7 @@ font-size: 17px;
 	padding-left: 48px;
 	padding-right: 48px;
 	padding-bottom: 88px;
-	background: linear-gradient(to top right, #fa9e1b, #8d4fff);
+	background: linear-gradient(to top right, #6D6027, #D3CBB8);
 }
 .contact_form
 {
@@ -1249,7 +1265,7 @@ font-size: 17px;
 	line-height: 53px;
 	padding-left: 29px;
 	padding-right: 29px;
-	background: #31124b;
+	background: black;
 	-webkit-transform: translateY(15px);
 	-moz-transform: translateY(15px);
 	-ms-transform: translateY(15px);
