--- a/Project/drive.css
+++ b/Project/drive.css
@@ -27,7 +27,7 @@ transition: all ease 0.8s;
     /* background-image: url("./assets/1-Mercedes-A-Class.jpg") ; */
     background:
 linear-gradient(135deg, rgba(35,37,38,0.6), rgba(65,67,69,0.6)),
-    url("./assets/bmw2.jpg");
+    url("./assets/bmw-4556370_1280.jpg");
     height: 650px;
     background-position: top center;
     background-size: cover;
@@ -50,6 +50,8 @@ linear-gradient(135deg, rgba(35,37,38,0.6), rgba(65,67,69,0.6)),
   
     /* padding: 20px ; */
 }
+
+/* drive seciton */
 
 
 .button2{
