--- a/Project/contact.css
+++ b/Project/contact.css
@@ -111,6 +111,12 @@ linear-gradient(135deg, rgba(35,37,38,0.6), rgba(65,67,69,0.6)),
 }
 
 
+@media (max-width:996px) {
+    .nav-link:hover{
+    border-bottom: none;
+    color: grey!important;
+  }
+}
 
 
 
