--- a/Project/cruise_port.css
+++ b/Project/cruise_port.css
@@ -24,14 +24,11 @@ transition: all ease 0.8s;
 
 
 .heroimg{
-    /* background-image: url("./assets/1-Mercedes-A-Class.jpg") ; */
-    background:
-linear-gradient(135deg, rgba(35,37,38,0.6), rgba(65,67,69,0.6)),
-    url("./assets/bmw3.webp");
+    background-image: 
+    url("./assets/cruise-ship.jpg");
     height: 650px;
-    background-position: top center;
+    background-position:center center;
     background-size: cover;
-    
 }
 .heading h1{
     color: white;
@@ -51,13 +48,19 @@ linear-gradient(135deg, rgba(35,37,38,0.6), rgba(65,67,69,0.6)),
     /* padding: 20px ; */
 }
 
-
-.button2{
-    width: 160px;
-    border-radius: 20px;
-    padding: 5px 10px;
-    border: none;
+.herobtn{
+    padding: 14px 40px;
+	border: none;
+	color: black;
+	background-color: white;
+border-radius: 5px;
+	font-weight: bold;
+font-size: 17px;
+text-transform: uppercase;
 }
+
+
+ 
 
 .icon{
     font-size: 10px;
@@ -111,6 +114,43 @@ linear-gradient(135deg, rgba(35,37,38,0.6), rgba(65,67,69,0.6)),
 }
 
 
+/* cruise port section */
+
+
+.cruise-sec{
+    background-color: #F5F5F5
+}
+.cruiseport-head1{
+    color: black;
+    letter-spacing: 0.2em;
+    font-size: 18px;
+    
+}
+.cruiseport-head2{
+    font-weight: bold;
+}
+.head-edit{
+    color: var(--nav1);
+   
+}
+.card-1{
+    border-radius: 15px;
+}
+.card-1:hover{
+    
+    background-color: var(--nav2)!important;
+    transition: all 0.5s ease;
+    color: white !important;
+}
+
+/* coverage */
+
+.coverage-sec{
+    
+    background-color: #dbd7d7;
+}
+
+
 @media (max-width:996px) {
     .nav-link:hover{
     border-bottom: none;
@@ -129,5 +169,32 @@ linear-gradient(135deg, rgba(35,37,38,0.6), rgba(65,67,69,0.6)),
 	border-bottom: 1px solid grey;
 	
   }
+    .cruise-cards{
+    display: grid !important;
+    grid-template-columns: 1fr 1fr;
+  }
+  .herobtn{
+font-size: 13px;
+padding: 10px 20px;
+width: 100%;
+  }
+  .herocontent{
+    width: 100% !important;
+    text-align: center;
+    margin-bottom: 10px;
+  }
+  .heroimg{
+    justify-content: end!important;
+  }
    
+
+
+}
+
+
+@media (max-width:576px) {
+    .cruise-cards{
+    display: grid !important;
+    grid-template-columns: 1fr ;
+  }
 }
