--- a/Project/style.css
+++ b/Project/style.css
@@ -1125,7 +1125,7 @@ font-size: 13px;
 
 .mycontainer{
 	
-	border-bottom: rgb(187, 186, 186) 2px solid;
+	/* border-bottom: rgb(187, 186, 186) 2px solid; */
 	padding-bottom: 40px;
 }
 
@@ -1185,9 +1185,7 @@ height: 70px;
 	grid-template-columns: 1fr 1fr 1fr;
 }
 /* Drive section */
-.drive{
-	padding-top: 40px;
-}
+
 
 
 .driveImg{
@@ -1238,7 +1236,7 @@ font-size: 17px;
 
 .About{
 	background-color: #F5F5F5;
-	margin-top: 50px;
+
 }
 
 /* Contact Form */
@@ -1247,8 +1245,8 @@ font-size: 17px;
 {
 	width: 100%;
 	
-    margin-bottom: 120px ;
-    margin-top: 70px;
+    /* margin-bottom: 120px ;
+    margin-top: 70px; */
 
 
 	
@@ -1259,7 +1257,7 @@ font-size: 17px;
 	bottom: -34px;
 	left: 0;
 	width: 100%;
-	height: 104%;
+	height: 106%;
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
